--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -3,7 +3,9 @@
     <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
-
+  <ion-list *ngFor="let user of userLists">
+    <ion-item>{{user.name}}</ion-item>
+  </ion-list>
 <ion-content>
 
 </ion-content>
